<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RecipeActivity">

  <TextView
      android:id="@+id/textViewTitle2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/txtRecipeName"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.110000014" />

  <TextView
      android:id="@+id/textIncredTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="64dp"
      android:text="@string/txtIncredients"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewTitle2" />

  <TextView
      android:id="@+id/txtIncred1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="64dp"
      android:layout_marginTop="16dp"
      android:text="@string/txtInc1"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textIncredTitle" />

  <TextView
      android:id="@+id/textIncred2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="64dp"
      android:layout_marginTop="16dp"
      android:text="@string/txtInc2"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtIncred1" />

  <TextView
      android:id="@+id/textIncred3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="64dp"
      android:layout_marginTop="16dp"
      android:text="@string/txtInc3"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textIncred2" />

  <TextView
      android:id="@+id/txtIncre4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="64dp"
      android:layout_marginTop="16dp"
      android:text="@string/txtInc4"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textIncred3" />

  <TextView
      android:id="@+id/txtDirectionTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="32dp"
      android:text="@string/txtDirectionTitle"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtIncre4" />

  <TextView
      android:id="@+id/textViewDirections"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:text="@string/txtDirection"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtDirectionTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>